--- a/frontend/src/components/media.css
+++ b/frontend/src/components/media.css
@@ -113,10 +113,10 @@
     padding: 2px !important;
   }
   .media-conv-box{
-    width: 120px !important;
+    width: 140px !important;
   }
 }
-@media screen and (max-width: 500px) {
+@media (max-width: 500px) {
   .media-btn1 {
     display: none !important;
   }
